- change catalog storage to store them in their own directory - chart loading notifier - change ENC cell's to know their own location